--- a/src/Components/Cart.css
+++ b/src/Components/Cart.css
@@ -10,9 +10,8 @@
 
 .boughtItems{
     /* border: 1px solid black; */
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    
 }
